Add init barchart

--- a/PioneerModel/interface/index.html
+++ b/PioneerModel/interface/index.html
@@ -37,17 +37,22 @@
       </p>
     </div>
 
-    <div class="col-lg-6" id="piechart">
+    <div class="col-lg-6" id="map">
     </div>
   </div>
 
   <div class="row">
-    <div class="col-lg-6" id="map">
+    <div class="col-lg-6" id="piechart">
     </div>
 
     <div class="col-lg-6" id="uncertainty">
     </div>
   </div>
+
+  <script language="javascript">
+   console.log(collision);
+   visualise_vsup(data,r_state,collision,direction,mutual_info,variation_ratio,combined_confidence);
+  </script>
 
 </div>
 
