Add interface grid, map functionality, basic interface complete

--- a/PioneerModel/interface/index.html
+++ b/PioneerModel/interface/index.html
@@ -20,9 +20,7 @@
 
  
 <div class="container">
-
-  <div class="row">
-    <div class="col-lg-6" id="indicator">
+   <div class="indicator">
       <p id="connecting">
 	Connecting to rosbridge...
       </p>
@@ -35,26 +33,16 @@
       <p id="closed" style="display:none">
 	Connection closed.
       </p>
-    </div>
-
-    <div class="col-lg-6" id="map">
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-6" id="piechart">
-    </div>
-
-    <div class="col-lg-6" id="uncertainty">
-    </div>
-  </div>
-
-  <script language="javascript">
-   console.log(collision);
-   visualise_vsup(data,r_state,collision,direction,mutual_info,variation_ratio,combined_confidence);
-  </script>
+   </div>
+   
+  <div class="map"></div>
+  <div class="uncertainty"></div>
+  <div class="piechart"></div>
 
 </div>
+ <script language="javascript">
+   visualise_vsup(data,r_state,collision,direction,mutual_info,variation_ratio,combined_confidence);
+  </script>
 
 </body>
 
